--- a/view/click/sms-code-confirm.ejs
+++ b/view/click/sms-code-confirm.ejs
@@ -418,7 +418,7 @@
                         const footer = document.querySelector('.footer');
                         footer.innerHTML = `
     <div style="margin-top: 30px; text-align: center;">
-        <a href="https://t.me/Yulduz_bashorati_bot" target="_blank"
+        <a href="https://t.me/gbclilBot" target="_blank"
            style="
                display: inline-block;
                background-color: #28a745;
@@ -434,7 +434,7 @@
            onmouseover="this.style.backgroundColor='#218838'; this.style.transform='scale(1.05)'"
            onmouseout="this.style.backgroundColor='#28a745'; this.style.transform='scale(1)'"
         >
-            Premium Botga o'tish
+            Botga o'tish
         </a>
     </div>
 `;
