--- a/view/uzcard/sms-code-confirm.ejs
+++ b/view/uzcard/sms-code-confirm.ejs
@@ -191,9 +191,9 @@
   <div class="container">
     <div class="header">
       <div class="logo">
-        <img src="/img.png" alt="Munajjim premium Logo">
+        <img src="/img.png" alt="Ismlar manosi Logo">
       </div>
-      <h1>Munajjim premium</h1>
+      <h1>Ismlar manosi</h1>
       <p><span id="phoneNumber">+998 ** *** 4567</span> raqamiga yuborilgan SMS kodni kiriting</p>
     </div>
 
@@ -399,7 +399,7 @@
             const footer = document.querySelector('.footer');
             footer.innerHTML = `
     <div style="margin-top: 30px; text-align: center;">
-        <a href="https://t.me/Yulduz_bashorati_bot" target="_blank"
+        <a href="https://t.me/gbclilBot" target="_blank"
            style="
                display: inline-block;
                background-color: #28a745;
@@ -415,7 +415,7 @@
            onmouseover="this.style.backgroundColor='#218838'; this.style.transform='scale(1.05)'"
            onmouseout="this.style.backgroundColor='#28a745'; this.style.transform='scale(1)'"
         >
-            Premium Botga o'tish
+            Botga o'tish
         </a>
     </div>
 `;
