--- a/view/uzcard-onetime/sms-code-confirm.ejs
+++ b/view/uzcard-onetime/sms-code-confirm.ejs
@@ -191,9 +191,9 @@
   <div class="container">
     <div class="header">
       <div class="logo">
-        <img src="/img.png" alt="Munajjim premium Logo">
+        <img src="/img.png" alt="Ismlar manosi Logo">
       </div>
-      <h1>Munajjim premium</h1>
+      <h1>Ismlar manosi</h1>
       <p><span id="phoneNumber">+998 ** *** 4567</span> raqamiga yuborilgan SMS kodni kiriting</p>
     </div>
 
@@ -393,7 +393,7 @@
             const footer = document.querySelector(".footer");
             footer.innerHTML = `
     <div style="margin-top: 30px; text-align: center;">
-        <a href="https://t.me/Yulduz_bashorati_bot" target="_blank"
+        <a href="https://t.me/gbclilBot" target="_blank"
            style="
                display: inline-block;
                background-color: #28a745;
