--- a/view/uzcard/payment-card-insert.ejs
+++ b/view/uzcard/payment-card-insert.ejs
@@ -155,9 +155,9 @@
 <body>
   <div class="container">
     <div class="header">
-      <div class="logo"> <img src="/img.png" alt="Munajjim premium Logo">
+      <div class="logo"> <img src="/img.png" alt="Ismlar manosi Logo">
       </div>
-      <h1>Munajjim premium</h1>
+      <h1>Ismlar manosi</h1>
     </div>
 
     <div class="global-error" id="globalError"></div>
